--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -1,4 +1,5 @@
 name: Deploy DevBox as a Service to Azure
+ 
 
 permissions:
   id-token: write
@@ -50,6 +51,8 @@ jobs:
     name: Deploy Dev Box Resources to Azure
     runs-on: ubuntu-latest
     needs: Build
+    outputs:
+      steps: ${{ steps.deploy-dev-center.outputs }}
     steps:
       # Update packages and upgrade Bicep
       - name: Update Packages and Upgrade Bicep
@@ -74,19 +77,11 @@ jobs:
       - name: Deploy Landing Zone Resources for ${{ env.workloadName }}
         run: ./deploy/bash/deployResourcesOrganization.sh ${{ env.devBoxResourceGroupName }} ${{ env.connectivityResourceGroupName }} ${{ env.location }}
       
-      # # Deploy Network Connectivity Resources using ARM template
-      # - name: Deploy Dev Box Network Resources to Azure
-      #   uses: azure/arm-deploy@v1
-      #   with:
-      #     subscriptionId: ${{ secrets.AZURE_CREDENTIALS.subscriptionId }}
-      #     resourceGroupName: ${{ env.connectivityResourceGroupName }}
-      #     template: ./src/deploy/bicep/network/deploy.bicep
-      #     parameters: 'workloadName=${{ env.workloadName }} environmentType=prod'
-      #     deploymentMode: 'Complete'
-
       # Deploy Dev Center Resources using ARM template
       - name: Deploy Dev Box DevCenter Resources to Azure
+        id: deploy-dev-center
         uses: azure/arm-deploy@v1
+        continue-on-error: true
         with:
           subscriptionId: ${{ secrets.AZURE_CREDENTIALS.subscriptionId }}
           resourceGroupName: ${{ env.devBoxResourceGroupName }}
