--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -51,8 +51,6 @@ jobs:
     name: Deploy Dev Box Resources to Azure
     runs-on: ubuntu-latest
     needs: Build
-    outputs:
-      steps: ${{ steps.deploy-dev-center.outputs }}
     steps:
       # Update packages and upgrade Bicep
       - name: Update Packages and Upgrade Bicep
@@ -88,6 +86,8 @@ jobs:
           template: ./src/bicep/deploy.bicep
           parameters: 'workloadName=${{ env.workloadName }} devBoxResourceGroupName=${{ env.devBoxResourceGroupName }} connectivityResourceGroupName=${{ env.connectivityResourceGroupName }}'
           deploymentMode: 'Complete'
+    outputs:
+      deployOutput: ${{ steps.deploy-dev-center.outputs.outputs }}
 
   publish-bicep-artifacts:
     runs-on: ubuntu-latest
