--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -67,24 +67,27 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      # Grant execute permissions to the deployment script
-      - name: Grant execute permissions to the script
-        run: chmod +x ./deploy/bash/deployResourcesOrganization.sh
+      # # Grant execute permissions to the deployment script
+      # - name: Grant execute permissions to the script
+      #   run: chmod +x ./deploy/bash/deployResourcesOrganization.sh
 
-      # Deploy the Landing Zone Resources using the deployment script
-      - name: Deploy Landing Zone Resources for ${{ env.workloadName }}
-        run: ./deploy/bash/deployResourcesOrganization.sh ${{ env.devBoxResourceGroupName }} ${{ env.connectivityResourceGroupName }} ${{ env.location }}
+      # # Deploy the Landing Zone Resources using the deployment script
+      # - name: Deploy Landing Zone Resources for ${{ env.workloadName }}
+      #   run: ./deploy/bash/deployResourcesOrganization.sh ${{ env.devBoxResourceGroupName }} ${{ env.connectivityResourceGroupName }} ${{ env.location }}
 
       # Deploy the Landing Zone Resources using the deployment script
       - name: Deploy Dev Box DevCenter Resources for ${{ env.workloadName }} to Azure
         run: |
-          $subName=$(az account show --subscription ${{ secrets.AZURE_CREDENTIALS.subscriptionId }} --query name -o tsv)
-          sudo az account set -s $subName 
-          sudo az deployment group create \
-            --resource-group ${{ env.devBoxResourceGroupName }} \
-            --template-file ./src/bicep/deploy.bicep \
-            --parameters workloadName=${{ env.workloadName }} devBoxResourceGroupName=${{ env.devBoxResourceGroupName }} connectivityResourceGroupName=${{ env.connectivityResourceGroupName }} \
-            --mode Complete
+          $subId=$(az account show --query id -o tsv)
+          $subName=$(az account show --subscription $subId --query name -o tsv) 
+          echo 'Subscription Name: ' $subName
+          echo 'Subscription ID: ' $subId
+          # sudo az account set -s $subName \
+          # sudo az deployment group create \
+          #   --resource-group ${{ env.devBoxResourceGroupName }} \
+          #   --template-file ./src/bicep/deploy.bicep \
+          #   --parameters workloadName=${{ env.workloadName }} devBoxResourceGroupName=${{ env.devBoxResourceGroupName }} connectivityResourceGroupName=${{ env.connectivityResourceGroupName }} \
+          #   --mode Complete
       
     #   # Deploy Dev Center Resources using ARM template
     #   - name: Deploy Dev Box DevCenter Resources to Azure
@@ -100,22 +103,22 @@ jobs:
     # outputs:
     #   deployOutput: ${{ steps.deploy-dev-center.outputs.outputs }}
 
-  publish-bicep-artifacts:
-    runs-on: ubuntu-latest
-    needs: Build
-    steps:
-      # Checkout the repository to get the source code
-      - name: Checkout repository
-        uses: actions/checkout@v2
+  # publish-bicep-artifacts:
+  #   runs-on: ubuntu-latest
+  #   needs: Build
+  #   steps:
+  #     # Checkout the repository to get the source code
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v2
 
-      # Download the previously uploaded Bicep artifacts
-      - name: Download Bicep Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: bicepArtifacts_v1.0.0-deploy-${{ github.run_number }}.zip
+  #     # Download the previously uploaded Bicep artifacts
+  #     - name: Download Bicep Artifacts
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: bicepArtifacts_v1.0.0-deploy-${{ github.run_number }}.zip
 
-      # Upload the Bicep artifacts to storage (add your upload logic here)
-      - name: Upload Bicep Artifacts to Storage
-        run: |
-          # Add your upload logic here
-          echo "Uploading Bicep artifacts"
+  #     # Upload the Bicep artifacts to storage (add your upload logic here)
+  #     - name: Upload Bicep Artifacts to Storage
+  #       run: |
+  #         # Add your upload logic here
+  #         echo "Uploading Bicep artifacts"
