--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -80,9 +80,9 @@ jobs:
       # Deploy the Landing Zone Resources using the deployment script
       - name: Deploy Dev Box DevCenter Resources for ${{ env.workloadName }} to Azure
         run: |
-          $subId=$(az account show --query id -o tsv)
-          $subName=$(az account show --subscription $subId --query name -o tsv) 
-          echo 'Subscription Name: ' $subName
+          $subId=$(az account show --query id -o tsv) \
+          $subName=$(az account show --subscription $subId --query name -o tsv) \
+          echo 'Subscription Name: ' $subName \
           echo 'Subscription ID: ' $subId
           # sudo az account set -s $subName \
           # sudo az deployment group create \
