--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -80,7 +80,7 @@ jobs:
       # Deploy the Landing Zone Resources using the deployment script
       - name: Deploy Dev Box DevCenter Resources for ${{ env.workloadName }} to Azure
         run: |
-          sudo az deployment group create \
+          az deployment group create \
             --resource-group ${{ env.devBoxResourceGroupName }} \
             --template-file ./src/bicep/deploy.bicep \
             --parameters workloadName=${{ env.workloadName }} devBoxResourceGroupName=${{ env.devBoxResourceGroupName }} connectivityResourceGroupName=${{ env.connectivityResourceGroupName }} \
