--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -18,39 +18,39 @@ env:
 
 jobs:
   
-  Build:
-    name: Build Bicep Artifacts
-    runs-on: ubuntu-latest
-    steps:
-      # Upgrade Bicep to the latest version
-      - name: Upgrade Bicep
-        run: |
-          sudo az bicep upgrade
+  # Build:
+  #   name: Build Bicep Artifacts
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     # Upgrade Bicep to the latest version
+  #     - name: Upgrade Bicep
+  #       run: |
+  #         sudo az bicep upgrade
 
-      # Checkout the repository to get the source code
-      - name: Checkout repository
-        uses: actions/checkout@v4
+  #     # Checkout the repository to get the source code
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
 
-      # Build the Bicep files for Dev Box Resources
-      - name: Build Dev Box Bicep files
-        run: az bicep build --file ./src/bicep/deploy.bicep --outfile ./bicepArtifacts/deploy.json
+  #     # Build the Bicep files for Dev Box Resources
+  #     - name: Build Dev Box Bicep files
+  #       run: az bicep build --file ./src/bicep/deploy.bicep --outfile ./bicepArtifacts/deploy.json
 
-      # Compress the built Bicep artifacts into a zip file
-      - name: Compress Bicep Artifacts
-        run: |
-          zip -r bicepArtifacts_v1.0.0-deploy-${{ github.run_number }}.zip ./bicepArtifacts
+  #     # Compress the built Bicep artifacts into a zip file
+  #     - name: Compress Bicep Artifacts
+  #       run: |
+  #         zip -r bicepArtifacts_v1.0.0-deploy-${{ github.run_number }}.zip ./bicepArtifacts
 
-      # Upload the compressed Bicep artifacts
-      - name: Upload Bicep Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: bicepArtifacts_v1.0.0-deploy-${{ github.run_number }}.zip
-          path: bicepArtifacts_v1.0.0-deploy-${{ github.run_number }}.zip
+  #     # Upload the compressed Bicep artifacts
+  #     - name: Upload Bicep Artifacts
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: bicepArtifacts_v1.0.0-deploy-${{ github.run_number }}.zip
+  #         path: bicepArtifacts_v1.0.0-deploy-${{ github.run_number }}.zip
 
   Deploy:
     name: Deploy Dev Box Resources to Azure
     runs-on: ubuntu-latest
-    needs: Build
+    #needs: Build
     steps:
       # Update packages and upgrade Bicep
       - name: Update Packages and Upgrade Bicep
@@ -78,12 +78,30 @@ jobs:
       #   run: ./deploy/bash/deployResourcesOrganization.sh ${{ env.devBoxResourceGroupName }} ${{ env.connectivityResourceGroupName }} ${{ env.location }}
 
       # Deploy the Landing Zone Resources using the deployment script
+      - name: Checking all changes for ${{ env.workloadName }} environment before deploying
+        continue-on-error: true
+        shell: bash
+        id: check-changes
+        run: |
+          az deployment group what-if \
+            --resource-group ${{ env.devBoxResourceGroupName }} \
+            --template-file ./src/bicep/deploy.bicep \
+            --parameters workloadName=${{ env.workloadName }} \
+                devBoxResourceGroupName=${{ env.devBoxResourceGroupName }} \
+                connectivityResourceGroupName=${{ env.connectivityResourceGroupName }} \
+            --mode Complete
+
       - name: Deploy Dev Box DevCenter Resources for ${{ env.workloadName }} to Azure
+        continue-on-error: true
+        shell: bash
+        id: deploy-dev-center
         run: |
           az deployment group create \
             --resource-group ${{ env.devBoxResourceGroupName }} \
             --template-file ./src/bicep/deploy.bicep \
-            --parameters workloadName=${{ env.workloadName }} devBoxResourceGroupName=${{ env.devBoxResourceGroupName }} connectivityResourceGroupName=${{ env.connectivityResourceGroupName }} \
+            --parameters workloadName=${{ env.workloadName }} \
+                devBoxResourceGroupName=${{ env.devBoxResourceGroupName }} \
+                connectivityResourceGroupName=${{ env.connectivityResourceGroupName }} \
             --mode Complete
       
     #   # Deploy Dev Center Resources using ARM template
