refactoring ci and cd

--- a/.github/workflows/devExpNewRelease.yaml
+++ b/.github/workflows/devExpNewRelease.yaml
@@ -151,7 +151,7 @@ jobs:
           tag_name: v1.0.${{ github.run_number }}
           release_name: Release v1.0.${{ github.run_number }}
           body: |
-            Commits: ${{ toJson(github.event.commits) }}
+            Commits: ${{ toJson(github.event.Commits) }}
           draft: false
           prerelease: false
         env:
