--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -65,10 +65,24 @@ jobs:
         run: ./deploy/bash/deployResourcesOrganization.sh ${{ env.devBoxResourceGroupName }} ${{ env.connectivityResourceGroupName }} ${{ env.location }}
 
       # Deploy the Landing Zone Resources using the deployment script
-      - name: Checking all changes for ${{ env.workloadName }} environment before deploying
+      - name: Checking all changes for ${{ env.workloadName }} in the Connectivity Landing Zone environment before deploying
         continue-on-error: true
         shell: bash
-        id: check-changes
+        id: check-changes-connectivity
+        run: |
+          az deployment group what-if \
+            --resource-group ${{ env.devBoxResourceGroupName }} \
+            --template-file ./src/bicep/deploy.bicep \
+            --parameters workloadName=${{ env.workloadName }} \
+                devBoxResourceGroupName=${{ env.devBoxResourceGroupName }} \
+                connectivityResourceGroupName=${{ env.connectivityResourceGroupName }} \
+            --mode Complete
+
+      # Deploy the Landing Zone Resources using the deployment script
+      - name: Checking all changes for ${{ env.workloadName }} in the DevEX Landing Zone environment before deploying
+        continue-on-error: true
+        shell: bash
+        id: check-changes-dev-box
         run: |
           az deployment group what-if \
             --resource-group ${{ env.devBoxResourceGroupName }} \
@@ -110,3 +124,42 @@ jobs:
         run: |
           # Add your upload logic here
           echo "Uploading Bicep artifacts"
+
+  create-release:
+    runs-on: ubuntu-latest
+    needs: publish-bicep-artifacts
+    steps:
+      # Checkout the repository to get the source code
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      # Download the previously uploaded Bicep artifacts
+      - name: Download Bicep Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: bicepArtifacts_v1.0.0-deploy-${{ github.run_number }}.zip
+
+      # Create a new GitHub release
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        with:
+          tag_name: v1.0.${{ github.run_number }}
+          release_name: Release v1.0.${{ github.run_number }}
+          body: |
+            Commits: ${{ toJson(github.event.Commits) }}
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Upload the release asset to the GitHub release
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: bicepArtifacts_v1.0.0-deploy-${{ github.run_number }}.zip
+          asset_name: bicepArtifacts_v1.0.0-deploy-${{ github.run_number }}.zip
+          asset_content_type: application/zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
