--- a/.github/workflows/devBox-CI.yaml
+++ b/.github/workflows/devBox-CI.yaml
@@ -19,25 +19,26 @@ jobs:
   Build:
     runs-on: ubuntu-latest
     steps:
-      # Upgrade Bicep to the latest version
-      - name: Upgrade Bicep
+      # Update packages and upgrade Bicep
+      - name: Update Packages and Upgrade Bicep
         run: |
           sudo apt-get update && \
           sudo apt-get upgrade -y && \
+          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash && \
           sudo az bicep upgrade
-
+      
       # Checkout the repository to get the source code
       - name: Checkout repository
         uses: actions/checkout@v4
-
+  
       # Build the Bicep files for Dev Box Resources
       - name: Build Dev Box Bicep files
-        run: az bicep build --file ./src/bicep/deploy.bicep --outfile ./bicepArtifacts/deploy.json
+        run: az bicep build --file ./deploy/deploy.bicep --outfile ./bicepArtifacts/deploy.json
 
       # Compress the built Bicep artifacts into a zip file
       - name: Compress Bicep Artifacts
         run: |
-          zip -r bicepArtifacts_v1.0.0-build-${{ github.run_number }}.zip ./bicepArtifacts
+          zip -r bicepArtifacts_v1.0.0-deploy-${{ github.run_number }}.zip ./bicepArtifacts
 
       # Upload the compressed Bicep artifacts
       - name: Upload Bicep Artifacts
