--- a/customizations/tasks/winget/task.yaml
+++ b/customizations/tasks/winget/task.yaml
@@ -4,7 +4,7 @@ $schema: 1.0
 name: winget
 description: Applies a winget configuration to the Dev Box.
 author: Microsoft Corporation
-command: './main.ps1 -ConfigurationFile {{configurationFile}} -DownloadUrl {{downloadUrl}} -InlineConfigurationBase64 {{inlineConfigurationBase64}} -Package {{package}} -Version {{version}} -RunAsUser {{runAsUser}}'
+command: .\main.ps1 -ConfigurationFile {{configurationFile}} -DownloadUrl {{downloadUrl}} -InlineConfigurationBase64 {{inlineConfigurationBase64}} -Package {{package}} -Version {{version}} -RunAsUser {{runAsUser}}
 parameters:
   configurationFile:
     default: ''
