--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -71,7 +71,7 @@ jobs:
         run: |
           az deployment group what-if \
             --resource-group ${{ env.connectivityResourceGroupName }} \
-            --template-file ./deploy/deploy.bicep \
+            --template-file ./src/bicep/connectivity/connectivityWorkload.bicep \
             --parameters workloadName=${{ env.workloadName }} \
                 devBoxResourceGroupName=${{ env.devBoxResourceGroupName }} \
                 connectivityResourceGroupName=${{ env.connectivityResourceGroupName }} \
@@ -84,7 +84,7 @@ jobs:
         run: |
           az deployment group what-if \
             --resource-group ${{ env.devBoxResourceGroupName }} \
-            --template-file ./deploy/deploy.bicep \
+            --template-file ./src/bicep/DevEx/devExWorkload.bicep \
             --parameters workloadName=${{ env.workloadName }} \
                 devBoxResourceGroupName=${{ env.devBoxResourceGroupName }} \
                 connectivityResourceGroupName=${{ env.connectivityResourceGroupName }} \
