--- a/.github/workflows/deployDevBox.yaml
+++ b/.github/workflows/deployDevBox.yaml
@@ -26,8 +26,7 @@ jobs:
       - name: Update Packages and Upgrade Bicep
         run: |
           sudo apt-get update && \
-          sudo apt-get upgrade -y && \
-          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash && \
+          # sudo apt-get upgrade -y && \
           sudo az bicep upgrade
       
       # Checkout the repository to get the source code
